# MAENI-note-to-docx

./: README.md  Student Note 0.docx  Student Note 128.docx  Student Note 173.docx  Student Note 329.docx  Student Note 359.docx  Student Note 360.docx  Student Note 368.docx  Student Note 389.docx  maeni-note-to-pdf.py  maeni_note_export.py  note_json.json  note_json_con.json  note_json_item.json  pyproject.toml  qt_interface.py  test.docx  test.html  test.txt
Exports/: .~lock.Student Note 173.docx#  Student Note 0.docx  Student Note 173.docx  Student Note 359.docx
ui/: gui.ui
